--- a/res/menu/menu.xml
+++ b/res/menu/menu.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
     <menu xmlns:android="http://schemas.android.com/apk/res/android">
          <item android:id="@+id/favorites"
-          android:icon="@drawable/favoritesicon"
-          android:title="@string/menu_favorites"/>
+          android:icon="@drawable/favoritesicon2"
+          android:title="@string/menu_favorites"
+          android:showAsAction="ifRoom"/>
     <item android:id="@+id/help"
           android:icon="@drawable/helpicon"
-          android:title="@string/menu_help" />
+          android:title="@string/menu_help" 
+          android:showAsAction="ifRoom"/>
         
     </menu>
