visual changes in the UI
added better looking button add to favorites and next line buttons and a
small change to the post to facebook button.

--- a/res/layout/activity_show_favorite_line.xml
+++ b/res/layout/activity_show_favorite_line.xml
@@ -37,7 +37,7 @@
         android:text="text"
         android:textStyle="bold" />
 
-    <ImageButton
+    <ImageView
         android:id="@+id/imageButtonShare"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
