--- a/res/layout/activity_street_lines.xml
+++ b/res/layout/activity_street_lines.xml
@@ -38,20 +38,21 @@
         android:text="text" />
 
     <ImageView
-        android:id="@+id/imageViewHeart"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
-        android:layout_alignBottom="@+id/textView2"
-        android:layout_alignLeft="@+id/imageViewBubbleTalk"
-        android:src="@drawable/heart_favorites" />
+        android:id="@+id/imageViewX"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignRight="@+id/textView2"
+        android:layout_marginRight="24dp"
+        android:src="@drawable/x_cirlce" />
 
     <ImageView
-        android:id="@+id/imageViewX"
-        android:layout_width="85dp"
-        android:layout_height="85dp"
-        android:layout_alignBottom="@+id/textView2"
-        android:layout_alignRight="@+id/imageViewBubbleTalk"
+        android:id="@+id/imageViewHeart"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_alignParentBottom="true"
         android:layout_marginRight="17dp"
-        android:src="@drawable/xicon" />
+        android:layout_toLeftOf="@+id/imageViewX"
+        android:src="@drawable/heart_circle" />
 
 </RelativeLayout>
