--- a/res/layout/activity_favorites_list.xml
+++ b/res/layout/activity_favorites_list.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#9edbf2"
+    android:background="@drawable/blur"
     tools:context="${relativePackage}.${activityClass}" >
     
     
@@ -19,7 +19,7 @@
         android:textStyle="bold" />
 
     <ListView
-        android:id="@+id/listViewFavorites"
+        android:id="@android:id/list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
