--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#9edbf2"
+    android:background="@drawable/blur"
     tools:context="${relativePackage}.${activityClass}" >
 
     <Button
@@ -58,6 +58,7 @@
         android:text="@string/manu_title"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textSize="50dp"
+        android:textColor="#ffffff"
         android:textStyle="bold" />
 
 </RelativeLayout>
