--- a/res/layout/activity_pub_lines.xml
+++ b/res/layout/activity_pub_lines.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#9edbf2"
+    android:background="@drawable/blur"
     tools:context="${relativePackage}.${activityClass}" >
     
     <TextView
@@ -15,16 +15,19 @@
         android:text="@string/pub_line"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textSize="25dp"
+        android:textColor="#ffffff"
         android:textStyle="bold" />
 
     <ImageView
         android:id="@+id/imageViewBubbleTalk"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView1"
         android:layout_alignParentBottom="true"
-        android:layout_alignRight="@+id/textView1"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
         android:layout_alignTop="@+id/textView1"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="14dp"
         android:src="@drawable/bubletalkpic" />
 
     <TextView
@@ -36,5 +39,23 @@
         android:layout_marginBottom="94dp"
   		android:textStyle="bold"
         android:text="text" />
+
+    <ImageView
+        android:id="@+id/imageViewX"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignRight="@+id/textView2"
+        android:layout_marginRight="24dp"
+        android:src="@drawable/x_cirlce" />
+
+    <ImageView
+        android:id="@+id/imageViewHeart"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginRight="17dp"
+        android:layout_toLeftOf="@+id/imageViewX"
+        android:src="@drawable/heart_circle" />
 
 </RelativeLayout>
